# edam-ontology.py

./: HISTORY.rst  MANIFEST.in  Makefile  README.rst  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml
edam_ontology/: __init__.py  streams.py
scripts/: commit_version.py  print_version_for_release.py
tests/: test_load.py
