[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "edam-ontology"
dynamic = ["version"]
description = "Versioned, Python packaged EDAM ontology (http://edamontology.org/) data."
readme = "README.rst"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "John Chilton", email = "jmchilton@gmail.com" },
]
keywords = [
    "EDAM",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Testing",
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/edamontology/edam-ontology.py"
Repository = "https://github.com/edamontology/edam-ontology.py"

[tool.setuptools]
packages = ["edam_ontology"]

[tool.setuptools.dynamic]
version = {attr = "edam_ontology.__version__"}
